# PX4-Autopilot

./: .gitmodules  Session.vim  road.world
ROMFS/px4fmu_common/init.d-posix/airframes/: 22000_gz_x500_depth_mic  9001_gz_x500_depth_lidar_down  CMakeLists.txt
src/modules/simulation/gz_bridge/: GZBridge.cpp
src/modules/simulation/gz_plugins/: CMakeLists.txt  Kconfig
src/modules/simulation/gz_plugins/oscillating_platform/: CMakeLists.txt  OscillatingPlatform.cpp  OscillatingPlatform.hpp
